// Gradle settings and tasks common to all Archer Game Template subprojects

apply plugin: 'application'
apply plugin: 'java'

java {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
}

import org.gradle.nativeplatform.platform.internal.DefaultNativePlatform
Boolean isMacOS = DefaultNativePlatform.currentOperatingSystem.isMacOsX()

tasks.withType(JavaExec).configureEach { // Java runtime options:
    if (isMacOS) {
        args '--noDialog'
        jvmArgs '-XstartOnFirstThread'
    }
    enableAssertions = true
    jvmArgs '--enable-native-access=ALL-UNNAMED' // suppress deprecation warnings
}

repositories {
    //mavenLocal()
    mavenCentral()
}

dependencies {
    implementation(libs.heart)
    implementation(libs.minie)
    implementation(libs.skyControl)
    implementation(libs.jme3.core)
    implementation(libs.jme3.desktop)
    implementation(libs.jme3.effects)
    runtimeOnly(libs.jme3.awt.dialogs)
    runtimeOnly(libs.jme3.jogg)
    implementation(libs.jme3.plugins)

    runtimeOnly(libs.jme3.lwjgl3)

    implementation files('../lib/shaderblow-ex-1.0.0.jar')
    runtimeOnly    files('../lib/jme-materialize.jar')
}

// cleanup tasks:

clean.dependsOn('cleanDLLs', 'cleanSOs')

tasks.register('cleanDLLs', Delete) { // extracted Windows native libraries
    delete fileTree(dir: '.', include: '*.dll')
}
tasks.register('cleanSOs', Delete) { // extracted Linux native libraries
    delete fileTree(dir: '.', include: '*.so')
}
